# Susurrus

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  __init__.py  __main__.py  check_imports.py  cli.py  config.py  diarize_audio.py  diarize_worker.py  dl_yt_mp3.py  install_voxtral.bat  install_voxtral.sh  main.py  mypi.ini  pyannote_torch26.py  pylint.rc  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  susurrus.py  test_backends.py  test_voxtral.py  transcribe_worker.py  voxtral_api.py  voxtral_local.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
backends/diarization/: __init__.py  compat.py  manager.py  progress.py
backends/transcription/: __init__.py  voxtral_api.py  voxtral_local.py
gui/: main_window.py  themes.py
gui/dialogs/: __init__.py  cuda_diagnostics_dialog.py  dependencies_dialog.py  installer_dialog.py  voice_clone_wizard.py
gui/widgets/: __init__.py  advanced_options.py  batch_panel.py  collapsible_box.py  crispasr_advanced_settings.py  diarization_settings.py  history_panel.py  log_viewer.py  segment_list_widget.py  translation_settings.py  tts_settings.py  voxtral_settings.py  waveform_widget.py
models/: __init__.py  model_config.py
scripts/: check_imports.py  cleanup_imports.sh  fix_all.sh  fix_all_complete.sh  fix_all_imports.sh  fix_syntax_errors.py  fix_unused_imports.py  generate_dependency_graph.py  lint_all.sh  pyannote_torch26.py
tests/: conftest.py
tests/integration/: test_cli_e2e.py  test_crispasr_live.py  test_diarization_live.py  test_transcription_workflow.py
tests/unit/: test_backends.py  test_batch_queue.py  test_c2pa_signing.py  test_compliance.py  test_crispasr_ffi.py  (+11 more)
utils/: __init__.py  audio_utils.py  c2pa_signing.py  crispasr_utils.py  dependency_check.py  device_detection.py  download_utils.py  export_formats.py  format_utils.py  history_service.py  i18n.py  progress_parser.py  segment_model.py  semantic_search.py  text_extraction.py
workers/: __init__.py  batch_queue.py  diarize_audio.py  diarize_worker.py  diarize_worker_thin.py  transcribe_worker.py  transcribe_worker_bkp.py  transcription_thread.py  tts_thread.py
(+28 files in other folders)
