[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "susurrus"
version = "2.9.0"
description = "Audio Transcription, TTS & Translation suite with multiple backends"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.25.1",
    "pydub>=0.25.1",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.0.0",
]
gpu = [
    "torch>=1.9.0",
    "torchaudio>=0.9.0",
]
tts = [
    "edge-tts>=6.1.0",
    "piper-tts>=1.2.0",
    "kokoro-onnx>=0.4.0",
    "chatterbox-tts>=0.1.2",
    "soundfile>=0.12.0",
]
text-extraction = [
    "pypdfium2>=4.0.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.5.0",
]
dev = [
    # CI installs from here via pip install -e ".[dev]" — single source of truth.
    # Formatters pinned exactly (output must be reproducible across CI + local).
    # Linters/runners use >= (output doesn't need to be identical).
    "ruff>=0.15.20",
    "black==25.9.0",
    "isort==6.1.0",
    "bandit>=1.9.4",
    "pylint>=3.0.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
all = [
    "susurrus[gui,gpu,tts,text-extraction]",
]

[project.scripts]
susurrus = "main:main"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]